# proyecto2024-CEDICA

./: .gitignore  README.md
admin/: .env.dist  .gitignore  README.md  app.py  pyproject.toml  todo.md
admin/src/core/: bcrypt.py  commands.py  config.py  container.py  database.py  seeds.py  storage.py  wiring.py
admin/src/core/module/accounts/: __init__.py  forms.py  models.py  repositories.py  services.py  validators.py
admin/src/core/module/auth/: __init__.py  data.py  forms.py  models.py  repositories.py  services.py
admin/src/core/module/charges/: __init__.py  forms.py  mappers.py  models.py  repositories.py
admin/src/core/module/common/: __init__.py  forms.py  mappers.py  models.py  repositories.py  services.py  validators.py
admin/src/core/module/contact/: __init__.py  forms.py  mappers.py  models.py  repositories.py
admin/src/core/module/employee/: __init__.py  data.py  forms.py  mappers.py  models.py  repositories.py  services.py  validators.py
admin/src/core/module/equestrian/: __init__.py  forms.py  mappers.py  models.py  repositories.py  services.py
admin/src/web/: __init__.py  commands.py  config.py  routes.py
admin/src/web/controllers/: __init__.py  api.py  auth.py  charges.py  contact.py  employee.py  equestrian.py  index.py  jockey_amazon.py  payment.py  publications.py  report.py  user.py  user_controllers.py
admin/src/web/handlers/: error.py
admin/src/web/helpers/: auth.py  create.py  filters.py  url.py
admin/src/web/templates/: base.html  base_document_edit.html  base_document_list.html  base_document_management.html  base_list.html  base_list_template.html  base_show.html  base_show_template.html  error.html  home.html  index.html  layout.html  update_relationship.html
admin/static/: error.css
admin/static/assets/ico/: site.webmanifest
admin/static/css/: error.css  home.css  style.css
admin/static/css/accounts/: auth.css
admin/static/css/components/: pagination.css  table.css
admin/static/css/documents/: buttons.css
admin/static/js/: app.js  charges-form-employee.js  charges-form-jya.js  charges-modal-search.js  file-input.js  form_validator.js  hamburger.js  modal-search.js  modal.js  notification.js  payment-form-employee.js  preview-image.js  reports.js  table-row-toggle.js  theme.js  toggle-password.js  toggle-search-bar.js  toggle-trainers.js  upload_type.js
admin/static/js/jockey_amazon/: family-form.js  health-form.js  work-assignment-form.js
admin/tests/: test_error_handlers.py  test_home.py
portal/: .env.dist  (+4 more)
(+194 files in other folders)
