[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = [
    "Juan Ignacio Torres <torresjuanilp@gmail.com>",
    "Daniel Sergio Nikiforov <nikiforovdaniel@gmail.com>",
    "Matias Gomez Carrique <gomezcarriquematias@gmail.com>",
    "Eduardo Miguel Kusznieryk <eduardokusznieryk@gmail.com>"
    ]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "3.12.3"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
