[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = [
    "Juan Ignacio Torres <torresjuanilp@gmail.com>",
    "Daniel Sergio Nikiforov <nikiforovdaniel@gmail.com>",
    "Matias Gomez Carrique <gomezcarriquematias@gmail.com>",
    "Eduardo Miguel Kusznieryk <eduardokusznieryk@gmail.com>"
    ]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "3.12.3"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
dependency-injector = "^4.42.0"
flask-session = "^0.8.0"
flask-bcrypt = "^1.0.1"
flask-wtf = "^1.2.1"
email-validator = "^2.2.0"
minio = "^7.2.9"
python-ulid = "^2.7.0"
faker = "^30.8.1"
flask-dance = "^7.1.0"
flask-ckeditor = "^1.0.0"
nh3 = "^0.2.18"
flask-cors = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
